src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.container-layout {
  @apply mx-5 px-2;
}

.container-layout-lg {
  @apply lg:mx-20 lg:px-6;
}

.container-layout-xl {
  @apply xl:mx-56 xl:px-6;
}

.li-group {
  @apply cursor-pointer text-xl lg:text-2xl;
}
.li-group:hover,
.li-group:focus {
  @apply xl:-translate-y-2 xl:text-info xl:delay-300;
}

.footer-group {
  @apply flex flex-col justify-center;
}
.footer-group-md {
  @apply md:my-10 md:flex-row md:justify-between;
}

.footer-li-first {
  @apply cursor-pointer;
}

.footer-li-first,
.footer-li-second {
  @apply py-1 text-base;
}

.footer-li-first:focus,
.footer-li-first:hover {
  @apply xl:text-blue-normal;
}
.footer-first-li {
  @apply cursor-pointer rounded-3xl bg-gray-500 p-2;
}
.footer-first-li :hover {
  @apply xl:opacity-80;
}

.magazine {
  @apply grid grid-cols-1 gap-5 md:grid-cols-4 md:grid-rows-4;
}
.magazine-title-layout {
  @apply col-span-full md:col-span-2 md:col-start-2 md:row-span-1 md:row-start-1;
}

.magazine-slogan {
  @apply md:col-span-2 md:col-start-1 md:row-span-1 md:row-start-2;
}
.magazine-pic {
  @apply md:col-span-2 md:col-start-2 md:row-span-1 md:row-start-3;
}
.magazine-pic-img {
  @apply h-full w-full overflow-hidden object-cover;
}
.magazine-paragraph {
  @apply md:col-span-3 md:col-start-2 md:row-span-1 md:row-start-4;
}
.slide {
  @apply flex items-center justify-center;
}

.featuresectiontitle {
  @apply flex justify-center py-4;
}
.service {
  @apply relative flex w-full justify-center py-10;
}
.service:nth-child(even) {
  @apply flex-row-reverse;
}

.service-pic {
  @apply w-3/4 bg-gray-300;
}

.service-pic img {
  @apply h-full  w-full object-cover;
}

.service-paragraph {
  @apply absolute top-1/2 z-10 w-1/2 -translate-y-1/2 rounded-xl bg-paragraph-color  p-10 tracking-widest text-white opacity-90;
}

.service-paragraph h4 {
  @apply p-2 text-3xl;
}

.service-paragraph p {
  @apply break-all p-2 text-xl leading-10;
}

.service:nth-child(odd) .service-paragraph {
  @apply left-0;
}

.service:nth-child(even) .service-paragraph {
  @apply right-0;
}

.sidebar {
  @apply my-5 flex flex-col rounded-md bg-sky-50 md:flex-row md:p-6;
}
.sidebar-reverse {
  @apply my-5 flex flex-col rounded-md bg-sky-50  md:flex-row-reverse md:p-6;
}
.sidebar-picture {
  @apply mb-4 w-full overflow-hidden rounded-lg align-middle shadow-md md:mb-0 md:w-1/2;
}
.sidebar-paragraph {
  @apply flex w-full flex-col justify-center p-2 md:w-1/2 md:p-4;
}
.sidebar-paragraph-title {
  @apply px-4 py-2  text-center text-2xl font-semibold text-sky-700 md:text-4xl;
}
.sidebar-paragraph-content {
  @apply flex justify-center break-words p-4 text-base leading-relaxed text-gray-600 md:text-left md:text-lg;
}

